Fix wrapping on service detail page

--- a/dashboard-gui/src/stylesheets/modules/app-detail.sass
+++ b/dashboard-gui/src/stylesheets/modules/app-detail.sass
@@ -24,10 +24,11 @@
       margin-left: -80px
 
       .left-side
+        flex: 1
         margin-left: 80px
 
       .right-side
-        width: 230px
+        flex-basis: 230px
         flex-shrink: 0
         margin-left: 80px
 
